--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -120,4 +120,7 @@ jobs:
       run: cargo check --all-targets --all-features
 
     - name: Run clippy
-      run: cargo clippy --all-targets --all-features -- -D warnings 
+      run: cargo clippy --all-targets --all-features -- -D warnings
+
+    - name: Set output
+      run: echo "var=value" >> $GITHUB_OUTPUT 
