fixing windows ci
Signed-off-by: vaibhav <vaibhavmattoo1@gmail.com>

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -30,6 +30,7 @@ jobs:
       run: ./run-tests.sh
 
     - name: Verify test success
+      shell: bash
       run: |
         if [ $? -eq 0 ]; then
           echo "🎉 All tests passed successfully!"
