--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ anyhow = "1.0"
 walkdir = "2.4"
 dialoguer = "0.11"
 pathdiff = "0.2.3"
+ratatui = "0.26"
+crossterm = "0.27"
 
 [dev-dependencies]
 assert_cmd = "2.0"
