fixed tag_name not supported in get_release workflow step
Signed-off-by: vaibhav <vaibhavmattoo1@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,8 +78,9 @@ jobs:
       - name: Get release info
         id: get_release
         uses: bruceadams/get-release@v1.3.2
-        with:
-          tag_name: v0.1.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
       - name: Upload release asset
         uses: shogo82148/actions-upload-release-asset@v1
