--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ dialoguer = "0.11"
 pathdiff = "0.2.3"
 ratatui = "0.26"
 crossterm = "0.27"
+glob = "0.3"
 
 [dev-dependencies]
 assert_cmd = "2.0"
